--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Mohit Jaiswal - Level 1 (Task 1)</title>
+<title>Yashwanth G.K - Level 1 (Task 2)</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="style.css">
 <link rel="shortcut icon" href="Logo.png" type="image/x-icon">
@@ -101,7 +101,7 @@
                     <div class="mt-5">
                         <img class="card-img-top" src="./CodSoft-Logo.png" alt="Card1" style="filter: saturate(1.8);" height="110">
                         <h3 class="heading mt-3">CodSoft</h3>
-                        <h5 class="heading mt-3">Leading provider of IT Business Solutions and full life-cycle Professional Services in the commercial and government sectors.
+                        <h5 class="heading mt-3">Leading provider of IT Business Solutions and Professional Services in the commercial and government sectors.
                         <br>
                         </h5>
                         <div class="mt-5">
@@ -129,9 +129,7 @@
                         <img class="card-img-top" src="./1.jpg" alt="Card1" style="filter: saturate(1.8);" height="110">
                         <h3 class="heading mt-3">Level 1</h3>
                         <h5 class="heading mt-3">
-                            Batch - July 2023
-                            <br>
-                            Task - 1
+                            Task - 2
                             <br>
                             Task - Landing Page
                             <br>
@@ -158,9 +156,8 @@
   </section>
 
   <footer>
-    <p>&copy; July 2023. Mohit Jaiswal.</p>
+    <p>&copy; March 2024. Yashwanth G.K .</p>
   </footer>
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
         </html>
