--- a/L1T1/Index1.html
+++ b/L1T1/Index1.html
@@ -44,5 +44,8 @@
             <a href="/Yashwanth_G.K_Resume.pdf" target="_blank">Download Resume</a>
         </button>
     </section>
+    <footer>
+      <p>&copy; 2024 Yashwanth G.K . All rights reserved.</p>
+    </footer>
 </body>
 </html>
