--- a/L1t3/Index1.html
+++ b/L1t3/Index1.html
@@ -33,5 +33,8 @@
     </form>
   </fieldset>
   </div>
+   <footer> 
+  <p>© 2024 Yashwanth G.K Codsoft Internship</p> 
+   </footer>
   </body>
 </html>
